Bug 464379 - The tiling shortcut doesn't work on my secondary monitor
Summary: The tiling shortcut doesn't work on my secondary monitor
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 5.26.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-16 14:40 UTC by Aleix Pol
Modified: 2023-01-25 16:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2023-01-16 14:40:32 UTC
I can shift+drag a window on my primary monitor easily, but if I move it to the other monitor it won't work, areas never get selected.
Comment 1 Vlad Zahorodnii 2023-01-16 14:42:48 UTC
Works fine on my machine.
Comment 2 Aleix Pol 2023-01-16 14:47:54 UTC
Maybe a special thing is that this secondary monitor is rotated 270ΒΊ.
Comment 3 David Edmundson 2023-01-16 16:13:41 UTC
Does pressing meta + t show the regions?
Comment 4 Aleix Pol 2023-01-16 16:17:55 UTC
> Does pressing meta + t show the regions?

Yes.
Comment 5 Bug Janitor Service 2023-01-24 18:16:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3482
Comment 6 Vlad Zahorodnii 2023-01-25 08:29:16 UTC
Git commit 76a039332d74785ab77d1b1f2629693d4d337a28 by Vlad Zahorodnii.
Committed on 25/01/2023 at 07:32.
Pushed by vladz into branch 'master'.

Make interactive custom tiling more robust to suboptimal tile configs

If the root tile node contains only one child node, but the child node
has its own children, kwin will fail to show an outline when the user
interactively tiles the window.

On the other hand, there is no reason to have this child count check.
For what it's worth, it also prevents tiling the window if the output
only has one tile, which is odd, but a valid usecase.

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/commit/76a039332d74785ab77d1b1f2629693d4d337a28
Comment 7 Vlad Zahorodnii 2023-01-25 11:36:07 UTC
Git commit e9d46f93231e43b2c8ea3a8408d1031b255268a9 by Vlad Zahorodnii.
Committed on 25/01/2023 at 09:39.
Pushed by vladz into branch 'Plasma/5.27'.

Make interactive custom tiling more robust to suboptimal tile configs

If the root tile node contains only one child node, but the child node
has its own children, kwin will fail to show an outline when the user
interactively tiles the window.

On the other hand, there is no reason to have this child count check.
For what it's worth, it also prevents tiling the window if the output
only has one tile, which is odd, but a valid usecase.
(cherry picked from commit 76a039332d74785ab77d1b1f2629693d4d337a28)

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/commit/e9d46f93231e43b2c8ea3a8408d1031b255268a9