Tile: Calculate children-of-children in teh childCount

Otherwise we count a tile that has sub-tiles as 1, which would make
handleInteractiveMoveResize think there are no areas when there are.

BUG: 464379